Resolved the winner issue

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <main>
+        <div id="winner"></div>
+        <br>
         <h1>Tic Tac Toe</h1>
         <div class="container">
             <div class="game">
