Added Newgame button functionality

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+    <div class="mess hide">
+    <p id="winner">winner</p>
+    <button id="newgame">New Game</button>
+</div>
     <main>
-        <div id="winner"></div>
+        
         <br>
         <h1>Tic Tac Toe</h1>
         <div class="container">
